# ExamEvoke

./: .pre-commit-config.yaml  README.md  add_questions.py  db.sqlite3  manage.py  pyproject.toml  requirements.txt
admin_panel/: models.py  urls.py  viewset.py
admin_panel/batches/: model.py  serializer.py  viewset.py
admin_panel/courses/: model.py  serializer.py  viewset.py
admin_panel/exam_batch/: model.py  serializer.py  viewset.py
admin_panel/exam_batch_student/: model.py  serializer.py  viewset.py
admin_panel/exam_employee/: model.py  serializer.py  viewset.py
admin_panel/exams/: model.py  serializer.py  viewset.py
admin_panel/migrations/: 0001_initial.py  0002_course_course_id.py  0002_subject.py  0003_batch.py  0003_batch_active_subject_active_topic.py  0004_alter_batch_id_alter_course_id.py  0004_user_rename_status_course_active.py  0005_employee_delete_user.py  0006_student_question.py  0007_subject_code.py  0008_alter_topic_batch.py  0009_exam.py  0010_alter_exam_duration_alter_exam_total_marks_and_more.py  0011_alter_exam_type_exambatch.py  0012_alter_exam_type_alter_exambatch_mode.py  0013_alter_exam_type.py  0014_alter_exam_type.py  0015_employee_user_student_user_alter_exam_type.py  0016_alter_exam_type.py  0017_alter_exam_type.py  0018_alter_employee_user_alter_student_user.py  0019_employee_organization.py  0020_remove_batch_serial_no_remove_subject_serial_no_and_more.py  0021_exam_organization.py  0022_remove_subject_batch_remove_topic_batch_and_more.py  (+9 more)
examevoke/: asgi.py  settings.py  urls.py  wsgi.py
utils/: timestamp_mixin.py
(+100 files in other folders)
